# urban-3d-reconstruction

./: .env  .env_alt  .gitignore  README.md  examples_requirements.txt  main.py  pyproject.toml  requirements.txt
abstract/: .gitignore  abstrakt.tex  main.tex  podsumowanie.tex  rozwiniecie_wstep.tex  section_A.tex  section_B.tex  section_C.tex  stan_nauki.tex  wyniki.tex
doc/: .gitignore  documentation.tex  literatura.bib  main.aux  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.synctex(busy)  main.tex  main.toc  projekt.tex  sota.tex  tytul.tex  wstep.tex  wyniki.tex  zakonczenie.tex  zalozenia.tex
doc/projekt/: architektura.aux  architektura.tex  filtracja.tex  gaussian_splatting.tex  rekonstrukcja.tex  rendering.aux  rendering.tex  struktura_plikowa.tex  technologie.tex  testy.tex  wizualizacja.aux  wizualizacja.tex  wymagania.tex
doc/wyniki/: akwizycja.tex  gaussian_splatting.tex  oprogramowanie.tex  segmentacja.tex
lightning_logs/version_0/: events.out.tfevents.1732565915.farqlia-laptop.44204.0
lightning_logs/version_1/: events.out.tfevents.1732565982.farqlia-laptop.31796.0
lightning_logs/version_10/: events.out.tfevents.1733646342.farqlia-laptop.31192.0
lightning_logs/version_11/: events.out.tfevents.1733646376.farqlia-laptop.47212.0
lightning_logs/version_12/: events.out.tfevents.1733646401.farqlia-laptop.11608.0
lightning_logs/version_13/: events.out.tfevents.1733646577.farqlia-laptop.19616.0
lightning_logs/version_14/: events.out.tfevents.1733646602.farqlia-laptop.32900.0
lightning_logs/version_15/: events.out.tfevents.1733646640.farqlia-laptop.46660.0
lightning_logs/version_16/: events.out.tfevents.1733646947.farqlia-laptop.29100.0
lightning_logs/version_17/: events.out.tfevents.1733646978.farqlia-laptop.24092.0
lightning_logs/version_18/: events.out.tfevents.1733647922.farqlia-laptop.52920.0
lightning_logs/version_19/: events.out.tfevents.1733648090.farqlia-laptop.14484.0
lightning_logs/version_2/: events.out.tfevents.1732566787.farqlia-laptop.33656.0
lightning_logs/version_20/: events.out.tfevents.1733648228.farqlia-laptop.53008.0
lightning_logs/version_21/: events.out.tfevents.1733648303.farqlia-laptop.55152.0
lightning_logs/version_22/: events.out.tfevents.1733780724.farqlia-laptop.22676.0
lightning_logs/version_23/: events.out.tfevents.1733786622.farqlia-laptop.47504.0
lightning_logs/version_24/: events.out.tfevents.1733787568.farqlia-laptop.56268.0
lightning_logs/version_25/: events.out.tfevents.1733787866.farqlia-laptop.32172.0
lightning_logs/version_26/: events.out.tfevents.1733824921.farqlia-laptop.27800.0
lightning_logs/version_27/: events.out.tfevents.1733825275.farqlia-laptop.9460.0
lightning_logs/version_28/: events.out.tfevents.1733826233.farqlia-laptop.35560.0
lightning_logs/version_29/: events.out.tfevents.1733827252.farqlia-laptop.40928.0
lightning_logs/version_3/: events.out.tfevents.1732567325.farqlia-laptop.17560.0
lightning_logs/version_30/: events.out.tfevents.1733827657.farqlia-laptop.54972.0
lightning_logs/version_31/: events.out.tfevents.1733829823.farqlia-laptop.45932.0
lightning_logs/version_32/: events.out.tfevents.1733831111.farqlia-laptop.28336.0
lightning_logs/version_33/: events.out.tfevents.1733832453.farqlia-laptop.10688.0
lightning_logs/version_34/: events.out.tfevents.1733833066.farqlia-laptop.43212.0
lightning_logs/version_35/: events.out.tfevents.1733833651.farqlia-laptop.44688.0
lightning_logs/version_36/: events.out.tfevents.1733834533.farqlia-laptop.55420.0
lightning_logs/version_4/: events.out.tfevents.1732567646.farqlia-laptop.10788.0
lightning_logs/version_5/: events.out.tfevents.1732567725.farqlia-laptop.38476.0
lightning_logs/version_6/: events.out.tfevents.1733643377.farqlia-laptop.19064.0
lightning_logs/version_7/: events.out.tfevents.1733643399.farqlia-laptop.11380.0
lightning_logs/version_8/: events.out.tfevents.1733646127.farqlia-laptop.9084.0
notebooks/: Chunked test.ipynb  Evaluate_model.ipynb  Examine reconstruction.ipynb  GSplat.ipynb  Gaussian.ipynb  Model Examination.ipynb  Models Comparison.ipynb  Open3D.ipynb  PoC.ipynb  Point Cloud Segmentation.ipynb  Rasterization.ipynb  Segmentation.ipynb  Spherical Harmonics.ipynb  Testing.ipynb
poster/: conference_poster_4.aux  conference_poster_4.fdb_latexmk  conference_poster_4.fls  conference_poster_4.tex
scripts/: add_rgb_color.py  change_image_resolution.py  chunk_dataset.py  chunk_test.py  ckpt_to_final_model.py  clean_after_experiments.py  colmap_reconstruction.py  compute_metrics.py  config_to_csv.py  convert_gs_model_to_ply.py  convert_to_ply.py  distance_pcd_filtering.py  evaluate.py  gs_viewer.py  merge_images.py  neighbor-based_pcd_filtering.py  parallel_computing.py  pcd_coloring.py  point_cloud_filtering.py  projection.py  rendering.py  run_flow.py  save_model.py  segmentation.py  simple_trainer.py  simple_viewer.py  small_splat_test.py  statistical_pcd_filtering.py  torch_model_to_ply.py  training.py  training_config_to_csv.py  undistort_images.py  visualize.py
src/backend/: controller.py
src/models/: utils.py  (+3 more)
src/urb3d/rendering/: CMakeLists.txt  ellipsoids.py  example.ply  librendering_lib.dll.a.bak  librendering_lib.exp  librendering_lib.lib  main  main.c  qt.py  render_point_cloud.py  rendering_library.py  rendering_utils.py  slideshow.py  vispy_point_cloud.py
src/urb3d/rendering/gs/: imgui.ini  renderer_ogl.py  util_gau.py
src/urb3d/rendering/lib/cglm/win/: build.bat
src/urb3d/rendering/setup/: README - OpenCL.md  README - OpenGL.md
src/urb3d/rendering/shaders/: fragment_shader.glsl  test_fragment_shader.glsl  test_fragment_shader2.glsl  test_vertex_shader.glsl
src/urb3d/rendering/src/: Makefile  camera.c  camera.h  data.c  frame.c  frame.h  loader.h  main  main.c  rendering.c  shader.c  shader.h
zpi-template/: abstrakt.aux  abstrakt.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  podsumowanie.tex  references.bib  rozwiniecie_wstep.tex  stan_nauki.tex  wyniki.tex
(+200 files in other folders)
