[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urb3d"
version = "1"
description = "Urban 3D reconstruction and segmentation"
requires-python = ">=3.8"
dependencies = [
    "jupyter~=1.1.1",
    "numpy~=2.1.1",
    "pycolmap==0.6.1",
    "matplotlib==3.9.2",
    "notebook==7.2.2",
    "torch",
    "open3d==0.18.0",
    "scipy==1.14.1",
    "scikit-learn==1.5.2"
]
authors = [
  {name = "Julia Farganus", email = "266564@student.pwr.edu.pl"},
  {name = "Katarzyna Wochal", email = "266529@student.pwr.edu.pl"},
  {name = "Daniel Borkowski", email = "266593@student.pwr.edu.pl"},
  {name = "Rafał Mielniczuk", email = "266508@student.pwr.edu.pl"},
]
readme='README.md'
license = {file='LICENSE.txt'}
keywords = ['photogrammetry', '3d', 'reconstruction', 'segmentation', 'urban', 'city', 'cuda']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python'
]

[project.optional-dependencies]
gui = ["PyQt5"]

[tool.setuptools]
packages = ["src"]

