[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urb3d"
version = "0.0.1"
description = "Codebase for urban 3d reconstruction"
requires-python = ">=3.8,<3.13"
dependencies = [
    "torchvision==0.20.0",
    "torchaudio==2.5.0",
    "numpy>=1.23, <2.0",  # !!! wersja taka musi byc by u mnie zadzialalo
    "matplotlib==3.9.2",
    "opencv-python==4.10.0.84",
    "imageio==2.36.0",
    "tyro==0.8.13",
    "pandas==2.2.3",
    "torchmetrics==1.5.0",
    "pyntcloud==0.3.1",
    "nerfview==0.0.2",
    "viser==0.2.1",
    "tqdm==4.66.5",
    "pyyaml==6.0.2",
    "gsplat @ https://github.com/nerfstudio-project/gsplat/releases/download/v1.4.0/gsplat-1.4.0%2Bpt24cu124-cp310-cp310-win_amd64.whl"
]


# we can use this to install our own package and use it
# however we need to have restructure src folder to have : src -> urb3d -> [... modules]
# [tool.setuptools.packages.find]
# where = ["src"]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    # "UP",  # pyupgrade
]
line-length = 120
ignore = [
    # "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]
extend-exclude = [".venv/", "build/", "dist/", "docs/"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
combine-as-imports = true
# known_first_party = "common"

ignore = [
    "I001",
]

[tool.setuptools.dynamic]
readme = {file = ['README.md']}